tests/macros/confirm/choices.stderr
error: option `choices` does not exist for kind `confirm`
 --> $DIR/choices.rs:2:39
  |
2 |     inquisition::questions![confirm { choices: todo!() }];
  |                                       ^^^^^^^
