tests/macros/confirm/choices.rs
fn main() {
    inquisition::questions![confirm { choices: todo!() }];
}
